Some changes in prompt text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <script>
-        let name=prompt("Enter your Friend's name: ");
+        let name=prompt("Enter your name: ");
         document.getElementById('name').innerHTML=name;
     </script>
 </body>
